<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".SearchFragment">

    <EditText android:id="@+id/search_box"
        android:layout_height = "wrap_content"
        android:layout_width = "0dp"
        android:layout_weight="1"
        android:hint="@string/search_hint"
        android:layout_gravity="top"/>

    <Button android:layout_height = "wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/search"
        android:id="@+id/search_button"
        android:layout_gravity="top"/>

    <Button android:layout_height = "wrap_content"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:id="@+id/back_button"
        android:layout_gravity="bottom"
        android:text="@string/back"/>

    <Button android:layout_height = "wrap_content"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:id="@+id/save_button"
        android:layout_gravity="bottom"
        android:text="@string/save"/>

    <Button android:layout_height = "wrap_content"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:id="@+id/next_button"
        android:layout_gravity="bottom"
        android:text="@string/next"/>



    <!--<TextView android:text="@string/hello_world" android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content" />-->

</LinearLayout>
